applications/nokia-edge-network-controller/enc-nwi-operator/templates/v1_service_enc-nwi-controller-manager-metrics-service.yaml
# Copyright (c) 2022 Nokia Corporation
# Licensed under the Apache License 2.0
# SPDX-License-Identifier: Apache-2.0
apiVersion: v1
kind: Service
metadata:
  labels:
    control-plane: controller-manager
  name: enc-nwi-controller-manager-metrics-service
  namespace: enc-nwi-system
spec:
  ports:
  - name: metrics-service
    port: 8080
    targetPort: metrics
  selector:
    control-plane: controller-manager
