applications/nokia-edge-network-controller/enc-nwi-operator/templates/v1_service_enc-nwi-webhook-service.yaml
# Copyright (c) 2022 Nokia Corporation
# Licensed under the Apache License 2.0
# SPDX-License-Identifier: Apache-2.0
apiVersion: v1
kind: Service
metadata:
  name: enc-nwi-webhook-service
  namespace: enc-nwi-system
spec:
  ports:
  - port: 443
    targetPort: 9443
  selector:
    control-plane: controller-manager
